<?xml version="1.0"?>
<package format="3">
  <name>mir_description</name>
  <version>1.1.8</version>
  <description>URDF description of the MiR robot</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/DFKI-NI/mir_robot</url>
  <url type="repository">https://github.com/DFKI-NI/mir_robot</url>
  <url type="bugtracker">https://github.com/DFKI-NI/mir_robot/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export> 
    <build_type>ament_cmake</build_type>
  </export>

</package>
