<?xml version="1.0"?>
<package format="3">
  <name>mir_gazebo</name>
  <version>1.1.8</version>
  <description>Simulation specific launch and configuration files for the MiR robot.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/DFKI-NI/mir_robot</url>
  <url type="repository">https://github.com/DFKI-NI/mir_robot</url>
  <url type="bugtracker">https://github.com/DFKI-NI/mir_robot/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>mir_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>robot_localization</exec_depend> 
  <exec_depend>rqt_robot_steering</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export> 
    <build_type>ament_cmake</build_type>
  </export>

</package>